and "read", the latter two of which are interpreted only by
Oracle and Mysql [ticket:292]
- added "lockmode" argument to base Query select/get functions, 
including "with_lockmode" function to get a Query copy that has 
a default locking mode.  Will translate "read"/"update" 
arguments into a for_update argument on the select side.
[ticket:292]

0.2.8
- cleanup on connection methods + documentation.  custom DBAPI
arguments specified in query string, 'connect_args' argument
to 'create_engine', or custom creation function via 'creator'
function to 'create_engine'.
- added "recycle" argument to Pool, is "pool_recycle" on create_engine,
defaults to 3600 seconds; connections after this age will be closed and
replaced with a new one, to handle db's that automatically close 
stale connections [ticket:274]
- changed "invalidate" semantics with pooled connection; will 
instruct the underlying connection record to reconnect the next 
time its called.  "invalidate" will also automatically be called
if any error is thrown in the underlying call to connection.cursor().
this will hopefully allow the connection pool to reconnect to a
database that had been stopped and started without restarting
the connecting application [ticket:121] 
- eesh !  the tutorial doctest was broken for quite some time.
- add_property() method on mapper does a "compile all mappers"
step in case the given property references a non-compiled mapper
(as it did in the case of the tutorial !)
- [ticket:277] check for pg sequence already existing before create
- if a contextual session is established via MapperExtension.get_session
(as it is using the sessioncontext plugin, etc), a lazy load operation
will use that session by default if the parent object is not 
persistent with a session already.
- lazy loads will not fire off for an object that does not have a 
database identity (why?  
see http://www.sqlalchemy.org/trac/wiki/WhyDontForeignKeysLoadData)